--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World!</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+<html lang="en" style="min-height: 100%">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@HameezExE</title>
+  </head>
+  <body
+    style="
+      background-color: #0b060f;
+      display: flex;
+      justify-content: center;
+      min-height: 100%;
+    "
+  >
+    <div
+      style="
+        display: flex;
+        background-color: #6b0fd8;
+        margin: 15% 0;
+        width: 85%;
+        padding: 50px 0;
+        border-radius: 5px;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <h1
+        style="
+          color: white;
+          font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+            Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+            sans-serif;
+        "
+      >
+        Coming Soon<sup style="font-size: 15px">TM</sup>
+      </h1>
+    </div>
+  </body>
 </html>
