--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muhammadh Hameez - Web Developer, Designer, Technophile.</title>
+    <title>Muhammadh Hameez | Web Developer, Designer, Technophile.</title>
     <meta
       name="description"
-      content="Self-Taught Web Developer, Tech Enthusiast from Sri Lanka who revolved x19 around the Sun. Creating a better Web 
-    with an impactful UI/UX while taking on challenges is my thing. 
-    Welcome to my Home within the Cyberspace!"
+      content="Self-Taught Web Developer, Designer, Technophile from Sri Lanka. Creating a better Web with an impactful UI/UX & SEO while taking on challenges is my thing. Welcome to my Home within the Cyberspace!"
     />
   </head>
   <body
