--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="min-height: 100%">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,37 +9,172 @@
       name="description"
       content="Self-Taught Web Developer, Designer, Technophile from Sri Lanka. Creating a better Web with an impactful UI/UX & SEO while taking on challenges is my thing. Welcome to my Home within the Cyberspace!"
     />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/9c2f41d45d.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body
-    style="
-      background-color: #0b060f;
-      display: flex;
-      justify-content: center;
-      min-height: 100%;
-    "
-  >
-    <div
-      style="
-        display: flex;
-        background-color: #6b0fd8;
-        margin: 15% 0;
-        width: 85%;
-        padding: 50px 0;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-      "
-    >
-      <h1
-        style="
-          color: white;
-          font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-            Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-            sans-serif;
-        "
-      >
-        Coming Soon<sup style="font-size: 15px">TM</sup>
-      </h1>
-    </div>
+  <body>
+    <img src="./assets/circle1.svg" alt="" id="circle1" />
+    <main>
+      <section id="hero">
+        <header>
+          <a href=""
+            ><h1>M<span class="H">H</span></h1></a
+          >
+          <nav>
+            <ul>
+              <li class="active"><a href="">About</a></li>
+              <li><a href="">Interest</a></li>
+              <li><a href="">Education</a></li>
+              <li><a href="">Experience</a></li>
+            </ul>
+          </nav>
+          <button>
+            <i class="fa-solid fa-bolt-lightning"></i>&nbsp; Connect
+          </button>
+        </header>
+        <div class="heroContent">
+          <div class="heroSocial">
+            <a href=""
+              ><span><i class="fa-solid fa-envelope-open"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-linkedin"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-github"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-x-twitter"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-discord"></i></span
+            ></a>
+          </div>
+          <div class="heroText">
+            <button class="devBtn">
+              <h3>Web Developer</h3>
+            </button>
+            <h2 class="tagline">
+              Hola! I’m <span class="highlighted">Hameez</span> 👋 <br />
+              Crafting
+              <span class="highlighted">Elevated Web Experiences </span> <br />
+              That Matters.
+            </h2>
+            <p>
+              Self-Taught Web Developer, Designer, Tech Enthusiast from Sri
+              Lanka who’s completed 19 revolutions around the Sun. I craft
+              Impactful Web/App Experiences with the power of Code, UI/UX & SEO.
+            </p>
+          </div>
+          <div>
+            <!-- <div class="profileDec" id="dec1"></div> -->
+            <img src="assets/Profile.jpg" alt="" />
+            <!-- <div class="profileDec" id="dec2"></div> -->
+          </div>
+        </div>
+        <button class="heroCTA">
+          <h3>DIVE DEEPER</h3>
+          <i class="fa-solid fa-chevron-down"></i>
+        </button>
+      </section>
+      <section id="interests">
+        <div class="intText">
+          <h4>INTERESTS</h4>
+          <h5>What I Enjoy Doing</h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
+            bibendum erat,bibendum erat, eget ultricies felicumsan turpis eget
+            ultricies felicumsan turpis. <br /><br />
+            Built with the best tools in the shed:
+          </p>
+          <button class="toolsBtn">VSCode</button>
+          <button class="toolsBtn">Git</button>
+          <button class="toolsBtn">Linux</button>
+        </div>
+        <div class="intContent">
+          <div class="intRow webDev">
+            <img src="" alt="" />
+            <div>
+              <h6>Web Development</h6>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+              <div class="intTools"></div>
+            </div>
+          </div>
+          <div class="intRow webDev">
+            <img src="" alt="" />
+            <div>
+              <h6>Design</h6>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+              <div class="intTools"></div>
+            </div>
+          </div>
+          <div class="intRow webDev">
+            <img src="" alt="" />
+            <div>
+              <h6>Search Engine Optimization</h6>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+              <div class="intTools"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="education">
+        <h5>My Education</h5>
+      </section>
+      <section id="experience">
+        <div class="expCont"></div>
+        <div class="expText">
+          <h4>Experience</h4>
+          <h5>What I've Done</h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
+            bibendum erat,bibendum erat, eget ultricies felicumsan turpis eget
+            ultricies felicumsan turpis
+          </p>
+          <button class="btnProjects">Explore</button>
+        </div>
+        <section id="Connect">
+          <h5>Let's Connect</h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
+            bibendum erat, eget ultricies felis. Fusce accumsan feugiat odio eu
+            efficitur. Sed et turpis pharetra, finibus nibh a, posuere urna.
+            Aliquam sed dolor egestas, cursus elit et, pellentesque urna.
+            Maecenas et suscipit felis. Proin vestibulum eu neque ut bibendum.
+            Vivamus.
+          </p>
+          <h6>HameezExE@GAMIL.COM</h6>
+          <h6>Reach out to me on:</h6>
+          <div class="conSocial"></div>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Crafted with ❤️ By <span>Hameez</span> in Sri Lanka. <br />
+        Unveil the 🔮 Sorcery behind this Website Here.
+      </p>
+    </footer>
   </body>
 </html>
