--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           </div>
           <div class="heroText">
             <button class="devBtn">
+              <i class="fa-solid fa-spider"></i>
               <h3>Web Developer</h3>
             </button>
             <h2 class="tagline">
@@ -96,9 +97,15 @@
             ultricies felicumsan turpis. <br /><br />
             Built with the best tools in the shed:
           </p>
-          <button class="toolsBtn">VSCode</button>
-          <button class="toolsBtn">Git</button>
-          <button class="toolsBtn">Linux</button>
+          <button class="toolsBtn">
+            <i class="fa-solid fa-code"></i>VSCode
+          </button>
+          <button class="toolsBtn">
+            <i class="fa-brands fa-git-alt"></i>Git
+          </button>
+          <button class="toolsBtn">
+            <i class="fa-brands fa-linux"></i>Linux
+          </button>
         </div>
         <div class="intContent">
           <div class="intRow webDev">
@@ -128,7 +135,7 @@
           <div class="intRow webDev">
             <img src="" alt="" />
             <div>
-              <h6>Search Engine Optimization</h6>
+              <h6>Digital Marketing</h6>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                 et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
@@ -145,7 +152,7 @@
       <section id="experience">
         <div class="expCont"></div>
         <div class="expText">
-          <h4>Experience</h4>
+          <h4>EXPERIENCE</h4>
           <h5>What I've Done</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
