Interests Section For Desktop

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </button>
       </section>
       <section id="interests">
+        <img src="./assets/circle3.svg" id="circle3" />
         <div class="intText">
           <h4>INTERESTS</h4>
           <h5>What I Enjoy Doing</h5>
@@ -109,40 +110,48 @@
         </div>
         <div class="intContent">
           <div class="intRow webDev">
-            <img src="" alt="" />
+            <img src="./assets/webdev.png" alt="" />
             <div>
               <h6>Web Development</h6>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                 et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
-                eget ultricies felicumsan turpis
               </p>
-              <div class="intTools"></div>
             </div>
           </div>
-          <div class="intRow webDev">
-            <img src="" alt="" />
+          <div class="intTools">
+            <span><i class="fa-brands fa-html5"></i></span>
+            <span><i class="fa-brands fa-css3-alt"></i></span>
+            <span><i class="fa-brands fa-square-js"></i></span>
+            <span><i class="fa-brands fa-php"></i></span>
+            <span><i class="fa-brands fa-python"></i></span>
+            <span><i class="fa-brands fa-wordpress"></i></span>
+          </div>
+          <div class="intRow">
+            <img src="./assets/design.png" alt="" />
             <div>
               <h6>Design</h6>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                 et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
-                eget ultricies felicumsan turpis
               </p>
-              <div class="intTools"></div>
             </div>
           </div>
-          <div class="intRow webDev">
-            <img src="" alt="" />
+          <div class="intTools">
+            <span><i class="fa-brands fa-figma"></i></span>
+          </div>
+          <div class="intRow">
+            <img src="./assets/digital.png" alt="" />
             <div>
               <h6>Digital Marketing</h6>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
                 et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
-                eget ultricies felicumsan turpis
               </p>
-              <div class="intTools"></div>
             </div>
+          </div>
+          <div class="intTools">
+            <span><i class="fa-brands fa-square-facebook"></i></span>
           </div>
         </div>
       </section>
