Highlighted webDev Row

--- a/index.html
+++ b/index.html
@@ -109,14 +109,17 @@
           </button>
         </div>
         <div class="intContent">
-          <div class="intRow webDev">
-            <img src="./assets/webdev.png" alt="" />
-            <div>
-              <h6>Web Development</h6>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
-              </p>
+          <div class="intRow" id="webDevRow">
+            <div class="webDevHigh">
+              <img src="./assets/webdev.png" alt="" />
+              <div>
+                <h6>Web Development</h6>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                  et bibendum erat,bibendum erat, eget ultricies felicumsan
+                  turpis
+                </p>
+              </div>
             </div>
           </div>
           <div class="intTools">
