Connect Section for Desktop

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </button>
         </header>
         <div class="heroContent">
-          <div class="heroSocial">
+          <div class="social socialCol">
             <a href=""
               ><span><i class="fa-solid fa-envelope-open"></i></span
             ></a>
@@ -159,7 +159,7 @@
         </div>
       </section>
       <section id="education">
-        <h5>My Education</h5>
+        <h5>My <span class="highlighted">Education.</span></h5>
       </section>
       <section id="experience">
         <div class="expCont"></div>
@@ -173,19 +173,35 @@
           </p>
           <button class="btnProjects">Explore</button>
         </div>
-        <section id="Connect">
-          <h5>Let's Connect</h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
-            bibendum erat, eget ultricies felis. Fusce accumsan feugiat odio eu
-            efficitur. Sed et turpis pharetra, finibus nibh a, posuere urna.
-            Aliquam sed dolor egestas, cursus elit et, pellentesque urna.
-            Maecenas et suscipit felis. Proin vestibulum eu neque ut bibendum.
-            Vivamus.
-          </p>
-          <h6>HameezExE@GAMIL.COM</h6>
-          <h6>Reach out to me on:</h6>
-          <div class="conSocial"></div>
+        <section id="connect">
+          <div class="connectText">
+            <h5>Let's <span class="highlighted">Connect</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
+              bibendum erat, eget ultricies felis. Fusce accumsan feugiat odio
+              eu efficitur. Sed et turpis pharetra
+            </p>
+            <div class="mail">
+              <i class="fa-solid fa-inbox"></i>
+              <h6>hameezexe@gmail.com</h6>
+            </div>
+            <h6>Reach out to me on:</h6>
+            <div class="social">
+              <a href=""
+                ><span><i class="fa-brands fa-linkedin"></i></span
+              ></a>
+              <a href=""
+                ><span><i class="fa-brands fa-github"></i></span
+              ></a>
+              <a href=""
+                ><span><i class="fa-brands fa-x-twitter"></i></span
+              ></a>
+              <a href=""
+                ><span><i class="fa-brands fa-discord"></i></span
+              ></a>
+            </div>
+          </div>
+          <img src="./assets/contact.png" alt="" />
         </section>
       </section>
     </main>
