Footer Wave added

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
     <footer>
       <p>
         Crafted with ❤️ By <span>Hameez</span> in Sri Lanka. <br />
-        Unveil the 🔮 Sorcery behind this Website Here.
+        Unveil the 🔮 Sorcery behind this Website
+        <a href="https://github.com/HameezExE/hameezexe.github.io">Here</a>.
       </p>
     </footer>
   </body>
