--- a/index.html
+++ b/index.html
@@ -160,9 +160,90 @@
       </section>
       <section id="education">
         <h5>My <span class="highlighted">Education.</span></h5>
+        <div id="timeLineHR">
+          <i class="fa-solid fa-caret-left"></i>
+          <hr />
+          <i class="fa-solid fa-caret-right"></i>
+        </div>
+        <div class="eduContainer">
+          <div class="eduCol">
+            <div class="eduIconCon">
+              <div class="eduIcon"><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
+            <div class="eduCard">
+              <h6>Open Learning by UoM</h6>
+              <hr />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+            </div>
+          </div>
+          <div class="eduCol">
+            <div class="eduIconCon">
+              <div class="eduIcon"><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
+            <div class="eduCard">
+              <h6>Open Learning by UoM</h6>
+              <hr />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+            </div>
+          </div>
+          <div class="eduCol">
+            <div class="eduIconCon">
+              <div class="eduIcon"><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
+            <div class="eduCard">
+              <h6>Open Learning by UoM</h6>
+              <hr />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+            </div>
+          </div>
+          <div class="eduCol">
+            <div class="eduIconCon">
+              <div class="eduIcon"><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
+            <div class="eduCard">
+              <h6>Open Learning by UoM</h6>
+              <hr />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+            </div>
+          </div>
+          <div class="eduCol">
+            <div class="eduIconCon">
+              <div class="eduIcon"><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
+            <div class="eduCard">
+              <h6>Open Learning by UoM</h6>
+              <hr />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+                et bibendum erat,bibendum erat, eget ultricies felicumsan turpis
+                eget ultricies felicumsan turpis
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="experience">
-        <div class="expCont"></div>
+        <div class="expCont">
+          <div class="expCard"></div>
+          <div class="expCard"></div>
+          <div class="expCard"></div>
+        </div>
         <div class="expText">
           <h4>EXPERIENCE</h4>
           <h5>What I've Done</h5>
@@ -173,44 +254,80 @@
           </p>
           <button class="btnProjects">Explore</button>
         </div>
-        <section id="connect">
-          <div class="connectText">
-            <h5>Let's <span class="highlighted">Connect</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
-              bibendum erat, eget ultricies felis. Fusce accumsan feugiat odio
-              eu efficitur. Sed et turpis pharetra
-            </p>
-            <div class="mail">
-              <i class="fa-solid fa-inbox"></i>
-              <h6>hameezexe@gmail.com</h6>
-            </div>
-            <h6>Reach out to me on:</h6>
-            <div class="social">
-              <a href=""
-                ><span><i class="fa-brands fa-linkedin"></i></span
-              ></a>
-              <a href=""
-                ><span><i class="fa-brands fa-github"></i></span
-              ></a>
-              <a href=""
-                ><span><i class="fa-brands fa-x-twitter"></i></span
-              ></a>
-              <a href=""
-                ><span><i class="fa-brands fa-discord"></i></span
-              ></a>
-            </div>
+      </section>
+      <section id="connect">
+        <div class="connectText">
+          <h5>Let's <span class="highlighted">Connect</span></h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
+            bibendum erat, eget ultricies felis. Fusce accumsan feugiat odio eu
+            efficitur. Sed et turpis pharetra
+          </p>
+          <div class="mail">
+            <i class="fa-solid fa-inbox"></i>
+            <h6>hameezexe@gmail.com</h6>
           </div>
-          <img src="./assets/contact.png" alt="" />
-        </section>
+          <h6>Reach out to me on:</h6>
+          <div class="social">
+            <a href=""
+              ><span><i class="fa-brands fa-linkedin"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-github"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-x-twitter"></i></span
+            ></a>
+            <a href=""
+              ><span><i class="fa-brands fa-discord"></i></span
+            ></a>
+          </div>
+        </div>
+        <img src="./assets/contact.png" alt="" />
       </section>
     </main>
     <footer>
       <p>
-        Crafted with ❤️ By <span>Hameez</span> in Sri Lanka. <br />
-        Unveil the 🔮 Sorcery behind this Website
-        <a href="https://github.com/HameezExE/hameezexe.github.io">Here</a>.
+        Brought to Life with <i class="fa-solid fa-code"></i> & a Touch of
+        <i class="fa-solid fa-wand-magic-sparkles"></i> by Yours Truly,
+        <span class="highlighted">Hameez.</span>
+        <br />
+        <a
+          href="https://github.com/HameezExE/hameezexe.github.io"
+          target="_blank"
+          >Unveil</a
+        >
+        the ✨ Sorcery Behind this Website.
       </p>
     </footer>
+    <script>
+      const slider = document.querySelector(".eduContainer");
+      let isDown = false;
+      let startX;
+      let scrollLeft;
+
+      slider.addEventListener("mousedown", (e) => {
+        isDown = true;
+        slider.classList.add("active");
+        startX = e.pageX - slider.offsetLeft;
+        scrollLeft = slider.scrollLeft;
+      });
+      slider.addEventListener("mouseleave", () => {
+        isDown = false;
+        slider.classList.remove("active");
+      });
+      slider.addEventListener("mouseup", () => {
+        isDown = false;
+        slider.classList.remove("active");
+      });
+      slider.addEventListener("mousemove", (e) => {
+        if (!isDown) return;
+        e.preventDefault();
+        const x = e.pageX - slider.offsetLeft;
+        const walk = (x - startX) * 1;
+        slider.scrollLeft = scrollLeft - walk;
+        console.log(walk);
+      });
+    </script>
   </body>
 </html>
