Desktop Site Partially Done

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="./assets/circle3.svg" id="circle3" />
         <div class="intText">
           <h4>INTERESTS</h4>
-          <h5>What I Enjoy Doing</h5>
+          <h5>What I Enjoy Doing.</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
             bibendum erat,bibendum erat, eget ultricies felicumsan turpis eget
@@ -246,13 +246,15 @@
         </div>
         <div class="expText">
           <h4>EXPERIENCE</h4>
-          <h5>What I've Done</h5>
+          <h5>What I've Done.</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et
             bibendum erat,bibendum erat, eget ultricies felicumsan turpis eget
             ultricies felicumsan turpis
           </p>
-          <button class="btnProjects">Explore</button>
+          <button class="btnProjects">
+            <i class="fa-brands fa-square-github"></i>Explore
+          </button>
         </div>
       </section>
       <section id="connect">
@@ -283,13 +285,13 @@
             ></a>
           </div>
         </div>
-        <img src="./assets/contact.png" alt="" />
+        <img src="./assets/connect.svg" alt="" />
       </section>
     </main>
     <footer>
       <p>
-        Brought to Life with <i class="fa-solid fa-code"></i> & a Touch of
-        <i class="fa-solid fa-wand-magic-sparkles"></i> by Yours Truly,
+        Brought to Life with <i class="fas fa-heartbeat"></i> and a Touch of
+        <i class="fa-solid fa-wand-magic-sparkles"></i> by
         <span class="highlighted">Hameez.</span>
         <br />
         <a
