--- a/index.html
+++ b/index.html
@@ -341,9 +341,30 @@
       </section>
       <section id="projects">
         <div class="proCont">
-          <div class="proCard"></div>
-          <div class="proCard"></div>
-          <div class="proCard"></div>
+          <div class="proCard">
+            <img src="./assets/4ceylon.png" alt="" />
+            <h6>4Celyon.LK (WIP)</h6>
+            <p>
+              4Ceylon.LK - E-commerce site built with WooCommerce and WordPress,
+              offering streamlined online shopping experience.
+            </p>
+          </div>
+          <div class="proCard">
+            <img src="./assets/Blog Mockup - Light.png" alt="" />
+            <h6>Blog Mockup</h6>
+            <p>
+              A modern blog mockup created in Figma, with dark and light mode
+              options showcasing a clean layout.
+            </p>
+          </div>
+          <div class="proCard">
+            <img src="./assets/skillex.png" alt="" />
+            <h6>SkilleX Community</h6>
+            <p>
+              Skillex is a dynamic platform developed to bring together Sri
+              Lankan developers, designers, and tech enthusiasts.
+            </p>
+          </div>
         </div>
         <div class="proText">
           <h4>Projects</h4>
