--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <nav>
               <ul>
                 <li class="active"><a href="">About</a></li>
-                <li><a href="">Interests</a></li>
-                <li><a href="">Experience</a></li>
-                <li><a href="">Education</a></li>
-                <li><a href="">Projects</a></li>
+                <li><a href="#interests">Interests</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <label for="theme" class="theme" id="lightModeToggle">
                   <span class="themeToggleWrap">
                     <input
@@ -87,8 +87,10 @@
                 </label>
               </ul>
             </nav>
-            <button>
+            <button >
+              <a href="#connect"">
               <i class="fa-solid fa-bolt-lightning"></i>&nbsp; Connect
+            </a>
             </button>
           </header>
         </div>
@@ -96,19 +98,19 @@
           <div
             class="social socialCol animate__animated animate__fadeInLeft animate__slower"
           >
-            <a href=""
+            <a href="mailto:hameezexe@gmail.com"
               ><span><i class="fa-solid fa-envelope-open"></i></span
             ></a>
-            <a href=""
+            <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
               ><span><i class="fa-brands fa-linkedin"></i></span
             ></a>
-            <a href=""
+            <a href="https://github.com/HameezExE" target="_blank"
               ><span><i class="fa-brands fa-github"></i></span
             ></a>
-            <a href=""
+            <a href="https://x.com/HameezExE" target="_blank"
               ><span><i class="fa-brands fa-x-twitter"></i></span
             ></a>
-            <a href=""
+            <a href="#"
               ><span><i class="fa-brands fa-discord"></i></span
             ></a>
           </div>
@@ -136,10 +138,12 @@
             <div class="profileDec" id="dec2"></div>
           </div>
         </div>
-        <button class="heroCTA">
+        <a href="#interests" class="heroCTALink">
+        <button class="heroCTA" >
           <h3>DIVE DEEPER</h3>
           <i class="fa-solid fa-chevron-down"></i>
         </button>
+      </a>
       </section>
       <section id="interests">
         <img src="./assets/circle3.svg" id="circle3" />
@@ -429,7 +433,9 @@
             tackled challenges & delivered impactful solutions.
           </p>
           <button class="btnProjects">
+            <a href="https://github.com/HameezExE?tab=repositories" target="_blank">
             <i class="fa-brands fa-square-github"></i>Explore
+          </a>
           </button>
         </div>
       </section>
@@ -453,17 +459,17 @@
               <h6>hameezexe@gmail.com</h6>
             </div>
             <div class="social">
-              <a href=""
+              <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
                 ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast"
                   ><i class="fa-brands fa-linkedin"></i></span
               ></a>
-              <a href=""
+              <a href="https://www.github.com/HameezExE" target="_blank"
                 ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
                   ><i class="fa-brands fa-github"></i></span
               ></a>
-              <a href=""
+              <a href="https://www.x.com/HameezExE" target="_blank"
                 ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
                   ><i class="fa-brands fa-x-twitter"></i></span
