--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
                 </label>
               </ul>
             </nav>
-            <button >
-              <a href="#connect"">
+            <button>
               <i class="fa-solid fa-bolt-lightning"></i>&nbsp; Connect
-            </a>
             </button>
           </header>
         </div>
@@ -139,11 +137,11 @@
           </div>
         </div>
         <a href="#interests" class="heroCTALink">
-        <button class="heroCTA" >
-          <h3>DIVE DEEPER</h3>
-          <i class="fa-solid fa-chevron-down"></i>
-        </button>
-      </a>
+          <button class="heroCTA">
+            <h3>DIVE DEEPER</h3>
+            <i class="fa-solid fa-chevron-down"></i>
+          </button>
+        </a>
       </section>
       <section id="interests">
         <img src="./assets/circle3.svg" id="circle3" />
@@ -433,9 +431,12 @@
             tackled challenges & delivered impactful solutions.
           </p>
           <button class="btnProjects">
-            <a href="https://github.com/HameezExE?tab=repositories" target="_blank">
-            <i class="fa-brands fa-square-github"></i>Explore
-          </a>
+            <a
+              href="https://github.com/HameezExE?tab=repositories"
+              target="_blank"
+            >
+              <i class="fa-brands fa-square-github"></i>Explore
+            </a>
           </button>
         </div>
       </section>
