Testing mobile styles

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
               <span class="highlighted">Elevated Web Experiences </span> <br />
               That Matters.
             </h2>
+            <h2 class="taglineM">
+              Howdy! I’m <span class="highlighted">Hameez</span> 👋 Crafting
+              <span class="highlighted">Elevated Web Experiences </span>
+              That Matters.
+            </h2>
             <p>
               Self-taught web developer, designer & technophile from Sri Lanka,
               with 20 solar revolutions fueling my passion. I transform ideas
