--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
               That Matters.
             </h2>
             <h2 class="taglineM">
-              Howdy! I’m <span class="highlighted">Hameez</span> 👋 Crafting
-              <span class="highlighted">Elevated Web Experiences </span>
-              That Matters.
+              Howdy! I’m <span class="highlighted">Hameez</span> 👋 <br />
+              Crafting
+              <span class="highlighted">Elevated Web Experiences. </span>
             </h2>
             <p>
               Self-taught web developer, designer & technophile from Sri Lanka,
@@ -394,6 +394,14 @@
         </div>
       </section>
       <section id="projects">
+        <button class="btnProjectsM">
+          <a
+            href="https://github.com/HameezExE?tab=repositories"
+            target="_blank"
+          >
+            <i class="fa-brands fa-square-github"></i>Explore
+          </a>
+        </button>
         <div class="proCont">
           <div
             class="proCard wow animate__animated animate__slideOutLeft animate__delay-1s"
