Finished mobile view

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               UI/UX design & digital marketing.
             </p>
           </div>
-          <div>
+          <div class="profileCont">
             <div class="profileDec" id="dec1"></div>
             <img src="assets/Profile.jpg" alt="" />
             <div class="profileDec" id="dec2"></div>
@@ -496,6 +496,52 @@
             </div>
           </div>
           <img src="./assets/connect.svg" alt="" />
+        </div>
+      </section>
+      <section id="connectM">
+        <div class="webDevHigh">
+          <h5>Let's <span class="highlighted">Connect!</span></h5>
+          <img src="./assets/connectM.svg" alt="" />
+          <div class="connectMText">
+            <p>
+              Got an idea to brainstorm, need a partner in crime for your next
+              project, or just in the mood for some tech banter? Let's build
+              something awesome together! <br />
+              <br />
+              <br />
+            </p>
+            <div></div>
+            <div class="mail">
+              <i class="fa-solid fa-phone-volume"></i>
+              <h6>+94 70 440 4505</h6>
+            </div>
+            <div class="mail">
+              <i class="fa-solid fa-inbox"></i>
+              <h6>hameezexe@gmail.com</h6>
+            </div>
+          </div>
+          <div class="social">
+            <a href="https://www.linkedin.com/in/hameezexe/" target="_blank"
+              ><span
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast"
+                ><i class="fa-brands fa-linkedin"></i></span
+            ></a>
+            <a href="https://www.github.com/HameezExE" target="_blank"
+              ><span
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-1s"
+                ><i class="fa-brands fa-github"></i></span
+            ></a>
+            <a href="https://www.x.com/HameezExE" target="_blank"
+              ><span
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
+                ><i class="fa-brands fa-x-twitter"></i></span
+            ></a>
+            <a href=""
+              ><span
+                class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-3s"
+                ><i class="fa-brands fa-discord"></i></span
+            ></a>
+          </div>
         </div>
       </section>
     </main>
