Removed discord link

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <a href="https://x.com/HameezExE" target="_blank"
               ><span><i class="fa-brands fa-x-twitter"></i></span
             ></a>
-            <a href="#"
-              ><span><i class="fa-brands fa-discord"></i></span
+            <a href="https://www.threads.net/@hameezexe" target="_blank"
+              ><span><i class="fa-brands fa-threads"></i></span
             ></a>
           </div>
           <div class="heroText">
@@ -488,10 +488,10 @@
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
                   ><i class="fa-brands fa-x-twitter"></i></span
               ></a>
-              <a href=""
+              <a href="https://www.threads.net/@hameezexe" target="_blank"
                 ><span
                   class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-3s"
-                  ><i class="fa-brands fa-discord"></i></span
+                  ><i class="fa-brands fa-threads"></i></span
               ></a>
             </div>
           </div>
@@ -536,10 +536,10 @@
                 class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-2s"
                 ><i class="fa-brands fa-x-twitter"></i></span
             ></a>
-            <a href=""
+            <a href="https://www.threads.net/@hameezexe" target="_blank"
               ><span
                 class="wow animate__animated animate__zoomIn animate__zoomIn animate__fast animate__delay-3s"
-                ><i class="fa-brands fa-discord"></i></span
+                ><i class="fa-brands fa-threads"></i></span
             ></a>
           </div>
         </div>
